--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,6 @@
     tools:context=".MainActivity"
     android:color="@android:color/background_light" >
 
-    <net.majorkernelpanic.streaming.gl.SurfaceView
-        android:id="@+id/surface"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/editText1" />
-
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
@@ -38,7 +32,7 @@
         android:ems="10"
         android:gravity="center"
         android:singleLine="true"
-        android:text="192.168.0.134" />
+        android:text="192.168.98.107" />
 
     <TextView
         android:id="@+id/bitrate"
@@ -49,6 +43,6 @@
         android:layout_alignParentTop="true"
         android:padding="5dp"
         android:text="@string/default_bitrate"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
 </RelativeLayout>
