--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,19 @@
         android:singleLine="true"
         android:text="192.168.98.107" />
 
+    <EditText
+        android:id="@+id/editTextPort"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/editText1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:ems="10"
+        android:gravity="center"
+        android:singleLine="true"
+        android:inputType="numberDecimal"
+        android:text="5004" />
+
     <TextView
         android:id="@+id/bitrate"
         android:layout_width="wrap_content"
