--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,13 @@
     tools:context=".MainActivity"
     android:color="@android:color/background_light" >
 
+    <SurfaceView
+        android:id="@+id/sfScreenData"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/layout1"/>
+
     <LinearLayout
         android:id="@+id/layout1"
         android:layout_width="match_parent"
@@ -45,7 +52,7 @@
         android:ems="10"
         android:gravity="center"
         android:singleLine="true"
-        android:text="192.168.98.107" />
+        android:text="192.168.98.118" />
 
 
 
